Closed
Bug 1448627
Opened 7 years ago
Closed 7 years ago
Crash in MixerContext::MixerContext
Categories
(Core :: Audio/Video: cubeb, defect)
Tracking
()
VERIFIED
FIXED
mozilla61
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox59 | --- | unaffected |
| firefox60 | --- | unaffected |
| firefox61 | + | verified |
People
(Reporter: alice0775, Assigned: jya)
References
()
Details
(Keywords: crash, regression, reproducible)
Crash Data
Attachments
(4 files)
[Tracking Requested - why for this release]:
This bug was filed from the Socorro interface and is
report bp-7d99db16-37e8-4c5f-a493-04e320180325.
=============================================================
Top 10 frames of crashing thread:
0 xul.dll MixerContext::MixerContext media/libcubeb/src/cubeb_mixer.cpp:105
1 xul.dll cubeb_mixer_create media/libcubeb/src/cubeb_mixer.cpp:645
2 xul.dll static int `anonymous namespace'::setup_wasapi_stream media/libcubeb/src/cubeb_wasapi.cpp:1745
3 xul.dll static int `anonymous namespace'::wasapi_stream_init media/libcubeb/src/cubeb_wasapi.cpp:1834
4 xul.dll cubeb_stream_init media/libcubeb/src/cubeb.c:315
5 xul.dll mozilla::AudioStream::OpenCubeb dom/media/AudioStream.cpp:386
6 xul.dll mozilla::AudioStream::Init dom/media/AudioStream.cpp:370
7 xul.dll mozilla::media::AudioSink::InitializeAudioStream dom/media/mediasink/AudioSink.cpp:204
8 xul.dll mozilla::media::AudioSink::Init dom/media/mediasink/AudioSink.cpp:95
9 xul.dll mozilla::media::AudioSinkWrapper::Start dom/media/mediasink/AudioSinkWrapper.cpp:196
=============================================================
Reproducible: always
Steps To Reproduce:
1. Open https://www.youtube.com/watch?v=zOWJqNPeifU
Actual Results:
Tab crashes
| Reporter | ||
Comment 1•7 years ago
|
||
| Reporter | ||
Comment 2•7 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=2acdab79292680b9764ad907d4ca67f9aa8bb49d&tochange=8d4c3cf648d6a9eecb8939df9c4f868570561ec8
Suspect: Bug 1432779
@:jya
Your bunch of patch seems to cause the crash, can you look into this?
Comment 4•7 years ago
|
||
cp'ing from bug 1448628
STR:
Load https://sinjidon.tumblr.com/post/163696633377 and play video
or https://vtt.tumblr.com/tumblr_ou15s1RDoW1vgmqck.mp4
Component: Audio/Video: Playback → Audio/Video: cubeb
Hardware: x86_64 → All
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)
| Assignee | ||
Comment 5•7 years ago
|
||
(In reply to Alice0775 White from comment #2)
> Regression window:
> https://hg.mozilla.org/integration/mozilla-inbound/
> pushloghtml?fromchange=2acdab79292680b9764ad907d4ca67f9aa8bb49d&tochange=8d4c
> 3cf648d6a9eecb8939df9c4f868570561ec8
>
> Suspect: Bug 1432779
>
> @:jya
> Your bunch of patch seems to cause the crash, can you look into this?
it works for me, (be certain I had extensively tested youtube !)
what is your speaker configuration on your PC?
removing preferred channel layout may not have been such a good idea after all, it only makes it harder to diagnostic the issue now as it would have provided me that answer...
| Reporter | ||
Comment 6•7 years ago
|
||
(In reply to Jean-Yves Avenard [:jya] from comment #5)
>
> what is your speaker configuration on your PC?
>
I do not know what you need. But, I attached a screenshot about sound properties.
| Assignee | ||
Comment 7•7 years ago
|
||
The issue is that you're using a Core 2 Duo or earlier I think... it doesn't have one instruction we use.
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 10•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8962136 [details]
Bug 1448627 - Don't use __popcnt intrinsec on windows.
https://reviewboard.mozilla.org/r/230980/#review236416
We'll merge the other patch.
Attachment #8962136 -
Flags: review?(padenot)
Updated•7 years ago
|
Attachment #8962137 -
Flags: review?(jyavenard)
| Comment hidden (mozreview-request) |
Comment 12•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8962136 [details]
Bug 1448627 - Don't use __popcnt intrinsec on windows.
https://reviewboard.mozilla.org/r/230980/#review236418
Attachment #8962136 -
Flags: review?(padenot) → review+
| Assignee | ||
Comment 13•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8962137 [details]
Bug 1448627 - Update cubeb to 7712aaab.
https://reviewboard.mozilla.org/r/230984/#review236420
Attachment #8962137 -
Flags: review?(jyavenard) → review+
Comment 14•7 years ago
|
||
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cc799615ea60
Update cubeb to 7712aaab. r=jya
Comment 15•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
| Assignee | ||
Comment 16•7 years ago
|
||
Alice, could you check that the latest nightly fixes the problem for you?
thank you
| Reporter | ||
Comment 17•7 years ago
|
||
(In reply to Jean-Yves Avenard [:jya] from comment #16)
> Alice, could you check that the latest nightly fixes the problem for you?
>
> thank you
Latest Nightly61.0a1[1] is no longer crashed.
[1]
Build ID 20180325130758
User Agent Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:61.0) Gecko/20100101 Firefox/61.0
Built from https://hg.mozilla.org/mozilla-central/rev/0707db8f028da5515484a24912b530491d918c3b
Status: RESOLVED → VERIFIED
Updated•7 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•